--- a/myCV.css
+++ b/myCV.css
@@ -28,34 +28,33 @@ li{
 	text-align: left;
 }
 
-.email{
-	float:left;
-	background-color:#caebe8;
-	width:20%;
-	height:60px;
-	border:1px solid black;
-	padding: 0.1%
+.contacts {
+	display: flex;
+	justify-content: space-evenly;
 }
 
-.phone{
-	float: center;
+.contacts > * {
+	padding: 20px;
 	background-color: #caebe8;
-	width:20%;
-	height:60px;
-	border:1px solid black;
-	padding: 0.1%;
-	margin:0 auto;
-	text-align:center;
-}
-
-.linkedin{
-	float: right;
-	background-color: #caebe8;
-	width:20%;
-	height:60px;
 	border: 1px solid black;
-	padding:0.1%;
-	margin:0 auto;
+}
+
+.flex {
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.cover-text {
+	padding: 100px;
+}
+
+.content {
+	background-color: #fff5db;
+	min-height: 100vh;
+}
+
+.navbar {
+	background-color: #ffae3d;
 }
 
 h1{
@@ -73,6 +72,10 @@ h3{
 	text-align:center;
 }
 
-body{
-	background:#caebe8;
+img {
+	object-fit:cover;
+}
+
+body {
+	height: 100%;
 }
